[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/gui/img/card_front.png" type="Texture" id=1]
[ext_resource path="res://assets/images/enemies/devil.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/img/heart_white.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/img/shield_white.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/img/star_white.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/img/ap_texture.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/img/square.png" type="Texture" id=7]
[ext_resource path="res://src/battle/PlayerPanel.gd" type="Script" id=8]
[ext_resource path="res://assets/gui/elements/panel_white.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/gui/img/card_back.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/img/button_bg.png" type="Texture" id=11]
[ext_resource path="res://src/battle/ItemBtn.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/images/sprites/icons.png" type="Texture" id=15]
[ext_resource path="res://assets/images/sprites/conditions.png" type="Texture" id=16]
[ext_resource path="res://src/battle/state/StateManager.gd" type="Script" id=17]
[ext_resource path="res://src/battle/Battle.gd" type="Script" id=18]
[ext_resource path="res://src/battle/state/State.gd" type="Script" id=19]
[ext_resource path="res://src/battle/NextTurnState.gd" type="Script" id=20]
[ext_resource path="res://src/battle/ActorStartTurnState.gd" type="Script" id=21]
[ext_resource path="res://src/battle/VictoryState.gd" type="Script" id=22]
[ext_resource path="res://src/battle/GameOverState.gd" type="Script" id=23]
[ext_resource path="res://src/battle/PlayerTurnStartState.gd" type="Script" id=24]
[ext_resource path="res://src/battle/EnemyPanel.gd" type="Script" id=25]

[sub_resource type="Animation" id=1]
resource_name = "Flash"
length = 1.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Banner/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Banner/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 17 )
initial_state = NodePath("Loading")

[node name="Loading" type="Node" parent="StateMachine"]
script = ExtResource( 19 )

[node name="NextTurnState" type="Node" parent="StateMachine"]
script = ExtResource( 20 )
actor_start_turn_state_path = NodePath("../ActorStartTurnState")
victory_state_path = NodePath("../VictoryState")
game_over_state_path = NodePath("../GameOverState")

[node name="VictoryState" type="Node" parent="StateMachine"]
script = ExtResource( 22 )

[node name="GameOverState" type="Node" parent="StateMachine"]
script = ExtResource( 23 )

[node name="ActorStartTurnState" type="Node" parent="StateMachine"]
script = ExtResource( 21 )
player_turn_state_path = NodePath("../PlayerTurnStartState")

[node name="PlayerTurnStartState" type="Node" parent="StateMachine"]
script = ExtResource( 24 )

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="EnemyPanel" type="Control" parent="."]
anchor_right = 1.0
margin_left = 11.0
margin_right = -11.0
margin_bottom = 67.0
script = ExtResource( 25 )

[node name="Panel" type="Panel" parent="EnemyPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="EnemyPanel"]
position = Vector2( 20, 10 )
texture = ExtResource( 2 )
centered = false
hframes = 9
frame = 1

[node name="Life" type="TextureRect" parent="EnemyPanel"]
self_modulate = Color( 0.152941, 0.152941, 0.152941, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -10.5
margin_top = 10.0
margin_right = -5.5
margin_bottom = 15.0
texture = ExtResource( 3 )

[node name="Percent" type="TextureProgress" parent="EnemyPanel/Life"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 1.0
margin_right = 12.0
margin_bottom = 2.0
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 7 )
tint_under = Color( 0.588235, 0.588235, 0.588235, 1 )
tint_progress = Color( 0.152941, 0.152941, 0.152941, 1 )
nine_patch_stretch = true

[node name="Value" type="RichTextLabel" parent="EnemyPanel/Life"]
self_modulate = Color( 0.152941, 0.152941, 0.152941, 1 )
margin_left = 6.0
margin_top = -1.0
margin_right = 22.0
margin_bottom = 5.0
bbcode_enabled = true
bbcode_text = "[color=#55272727]0[/color][color=#ff272727]25[/color]
"
text = "025
"
scroll_active = false

[node name="Armor" type="TextureRect" parent="EnemyPanel"]
modulate = Color( 0.454902, 0.454902, 0.454902, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.5
margin_top = 12.0
margin_right = -24.5
margin_bottom = 17.0
texture = ExtResource( 4 )

[node name="Value" type="RichTextLabel" parent="EnemyPanel/Armor"]
margin_left = 6.0
margin_top = -1.0
margin_right = 18.0
margin_bottom = 5.0
bbcode_enabled = true
bbcode_text = "[color=#55ffffff]0[/color][color=#ffffffff]25[/color]"
text = "025"
scroll_active = false

[node name="Mana" type="TextureRect" parent="EnemyPanel"]
modulate = Color( 0.454902, 0.454902, 0.454902, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 13.5
margin_top = 12.0
margin_right = 18.5
margin_bottom = 17.0
texture = ExtResource( 5 )

[node name="Value" type="RichTextLabel" parent="EnemyPanel/Mana"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 1.0
margin_top = -1.0
margin_right = 13.0
margin_bottom = 5.0
bbcode_enabled = true
bbcode_text = "[color=#55ffffff]0[/color][color=#ffffffff]25[/color]"
text = "025"
scroll_active = false

[node name="Intent" type="HBoxContainer" parent="EnemyPanel"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.5
margin_top = -15.0
margin_right = 42.5
margin_bottom = -9.0
custom_constants/separation = 0
alignment = 1

[node name="Effect" type="Control" parent="EnemyPanel/Intent"]
visible = false
margin_left = 31.0
margin_right = 36.0
margin_bottom = 6.0
rect_min_size = Vector2( 5, 5 )

[node name="Sprite" type="Sprite" parent="EnemyPanel/Intent/Effect"]
position = Vector2( -4, -1 )
texture = ExtResource( 16 )
centered = false
hframes = 10
vframes = 10
frame = 4

[node name="Buffer" type="ColorRect" parent="EnemyPanel/Intent"]
margin_left = 33.0
margin_right = 34.0
margin_bottom = 6.0
rect_min_size = Vector2( 1, 6 )
color = Color( 1, 1, 1, 0 )

[node name="Value" type="Label" parent="EnemyPanel/Intent"]
margin_left = 34.0
margin_right = 46.0
margin_bottom = 6.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "4x3"
align = 2

[node name="Type" type="Control" parent="EnemyPanel/Intent"]
margin_left = 46.0
margin_right = 51.0
margin_bottom = 6.0
rect_min_size = Vector2( 5, 5 )

[node name="Sprite" type="Sprite" parent="EnemyPanel/Intent/Type"]
position = Vector2( 0, 1 )
texture = ExtResource( 15 )
centered = false
hframes = 10
vframes = 10
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyPanel"]

[node name="Traits" type="VBoxContainer" parent="EnemyPanel"]
margin_left = -10.0
margin_top = 11.0
margin_right = -1.0
margin_bottom = 61.0
custom_constants/separation = 2

[node name="Trait" type="Control" parent="EnemyPanel/Traits"]
margin_right = 9.0
margin_bottom = 9.0
rect_min_size = Vector2( 9, 9 )

[node name="Sprite" type="Sprite" parent="EnemyPanel/Traits/Trait"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
texture = ExtResource( 16 )
centered = false
hframes = 10
vframes = 10

[node name="Trait2" type="Control" parent="EnemyPanel/Traits"]
margin_top = 11.0
margin_right = 9.0
margin_bottom = 20.0
rect_min_size = Vector2( 9, 9 )

[node name="Sprite" type="Sprite" parent="EnemyPanel/Traits/Trait2"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
texture = ExtResource( 16 )
centered = false
hframes = 10
vframes = 10

[node name="Trait3" type="Control" parent="EnemyPanel/Traits"]
margin_top = 22.0
margin_right = 9.0
margin_bottom = 31.0
rect_min_size = Vector2( 9, 9 )

[node name="Sprite" type="Sprite" parent="EnemyPanel/Traits/Trait3"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
texture = ExtResource( 16 )
centered = false
hframes = 10
vframes = 10

[node name="Trait4" type="Control" parent="EnemyPanel/Traits"]
margin_top = 33.0
margin_right = 9.0
margin_bottom = 42.0
rect_min_size = Vector2( 9, 9 )

[node name="Sprite" type="Sprite" parent="EnemyPanel/Traits/Trait4"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
texture = ExtResource( 16 )
centered = false
hframes = 10
vframes = 10

[node name="PlayerPanel" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -35.0
margin_right = -16.0
margin_bottom = -16.0
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Life" type="TextureRect" parent="PlayerPanel"]
modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.5
margin_top = -6.5
margin_right = -11.5
margin_bottom = -1.5
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="RichTextLabel" parent="PlayerPanel/Life"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -3.5
margin_right = 34.0
margin_bottom = 3.5
rect_rotation = 0.130395
bbcode_enabled = true
bbcode_text = "[color=#55ffffff]0[/color][color=#ffffffff]25[/color]/100"
text = "025/100"
scroll_active = false

[node name="Percent" type="TextureProgress" parent="PlayerPanel/Life"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 1.0
margin_right = 28.0
margin_bottom = 2.0
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 7 )
tint_under = Color( 0.313726, 0.313726, 0.313726, 1 )
tint_progress = Color( 0.760784, 0.760784, 0.760784, 1 )
nine_patch_stretch = true

[node name="Armor" type="Control" parent="PlayerPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -5.5
margin_right = 21.0
margin_bottom = -0.5

[node name="Icon" type="TextureRect" parent="PlayerPanel/Armor"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -2.5
margin_right = 5.0
margin_bottom = 2.5
texture = ExtResource( 4 )

[node name="Value" type="RichTextLabel" parent="PlayerPanel/Armor/Icon"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -3.5
margin_right = 19.0
margin_bottom = 4.5
bbcode_enabled = true
bbcode_text = "[color=#444]00[/color]5"
text = "005"
scroll_active = false

[node name="Mana" type="Control" parent="PlayerPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -5.5
margin_right = -3.0
margin_bottom = -0.5

[node name="Icon" type="TextureRect" parent="PlayerPanel/Mana"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
margin_right = 5.0
margin_bottom = 5.0
texture = ExtResource( 5 )

[node name="Value" type="RichTextLabel" parent="PlayerPanel/Mana/Icon"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -3.5
margin_right = 18.0
margin_bottom = 3.5
bbcode_enabled = true
bbcode_text = "[color=#444]0[/color]20"
text = "020"
scroll_active = false

[node name="Stamina" type="Control" parent="PlayerPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -36.5
margin_top = -6.0
margin_right = 37.5
margin_bottom = -1.0

[node name="StaminaMax" type="TextureRect" parent="PlayerPanel/Stamina"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 0.156863 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -2.0
margin_right = -2.0
margin_bottom = -2.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="StaminaCur" type="TextureRect" parent="PlayerPanel/Stamina"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -2.0
margin_right = -38.0
margin_bottom = -2.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerPanel"]

[node name="Draw" type="NinePatchRect" parent="."]
margin_left = 2.0
margin_top = 61.0
margin_right = 15.0
margin_bottom = 80.0
texture = ExtResource( 1 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Pile" type="VBoxContainer" parent="Draw"]
visible = false
margin_left = 5.0
margin_top = 11.0
margin_right = 104.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="Draw"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
custom_colors/font_color = Color( 0.152941, 0.152941, 0.152941, 1 )
text = "00"
align = 1
valign = 1

[node name="Discard" type="NinePatchRect" parent="."]
margin_left = 94.0
margin_top = 61.0
margin_right = 107.0
margin_bottom = 80.0
texture = ExtResource( 10 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Button" type="TextureButton" parent="Discard"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Discard"]
margin_left = -90.0
margin_top = -50.0
margin_right = 11.0
margin_bottom = 112.0
color = Color( 0.152941, 0.152941, 0.152941, 0.784314 )

[node name="Pile" type="VBoxContainer" parent="Discard"]
margin_left = -89.0
margin_top = -46.0
margin_right = 11.0
margin_bottom = 112.0
custom_constants/separation = 2

[node name="Label" type="Label" parent="Discard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
text = "00"
align = 1
valign = 1

[node name="Dropped" type="NinePatchRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.686275 )
margin_left = 94.0
margin_top = 49.0
margin_right = 107.0
margin_bottom = 60.0
texture = ExtResource( 10 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Pile" type="VBoxContainer" parent="Dropped"]
visible = false
margin_left = 5.0
margin_top = 11.0
margin_right = 104.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="Dropped"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
text = "00"
align = 1
valign = 1

[node name="Debuffs" type="HBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -83.0
margin_top = -16.0
margin_right = -2.0
margin_bottom = -3.0
custom_constants/separation = 1
alignment = 2

[node name="Condition" type="Control" parent="Debuffs"]
margin_left = 32.0
margin_right = 41.0
margin_bottom = 13.0
rect_min_size = Vector2( 9, 9 )

[node name="Sprite" type="Sprite" parent="Debuffs/Condition"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
texture = ExtResource( 16 )
centered = false
hframes = 10
vframes = 10
frame = 51

[node name="Label" type="Label" parent="Debuffs/Condition"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -11.0
margin_top = 7.0
margin_bottom = 13.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "9"
align = 2

[node name="Condition2" type="Control" parent="Debuffs"]
margin_left = 42.0
margin_right = 51.0
margin_bottom = 13.0
rect_min_size = Vector2( 9, 9 )

[node name="Sprite" type="Sprite" parent="Debuffs/Condition2"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
texture = ExtResource( 16 )
centered = false
hframes = 10
vframes = 10
frame = 3

[node name="Label" type="Label" parent="Debuffs/Condition2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -11.0
margin_top = 7.0
margin_bottom = 13.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "9"
align = 2

[node name="Condition3" type="Control" parent="Debuffs"]
margin_left = 52.0
margin_right = 61.0
margin_bottom = 13.0
rect_min_size = Vector2( 9, 9 )

[node name="Sprite" type="Sprite" parent="Debuffs/Condition3"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
texture = ExtResource( 16 )
centered = false
hframes = 10
vframes = 10
frame = 3

[node name="Label" type="Label" parent="Debuffs/Condition3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -11.0
margin_top = 7.0
margin_bottom = 13.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "9"
align = 2

[node name="Condition4" type="Control" parent="Debuffs"]
margin_left = 62.0
margin_right = 71.0
margin_bottom = 13.0
rect_min_size = Vector2( 9, 9 )

[node name="Sprite" type="Sprite" parent="Debuffs/Condition4"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
texture = ExtResource( 16 )
centered = false
hframes = 10
vframes = 10
frame = 3

[node name="Label" type="Label" parent="Debuffs/Condition4"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -11.0
margin_top = 7.0
margin_bottom = 13.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "9"
align = 2

[node name="Condition5" type="Control" parent="Debuffs"]
margin_left = 72.0
margin_right = 81.0
margin_bottom = 13.0
rect_min_size = Vector2( 9, 9 )

[node name="Sprite" type="Sprite" parent="Debuffs/Condition5"]
self_modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
texture = ExtResource( 16 )
centered = false
hframes = 10
vframes = 10
frame = 3

[node name="Label" type="Label" parent="Debuffs/Condition5"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -11.0
margin_top = 7.0
margin_bottom = 13.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "9"
align = 2

[node name="Hand" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 96.0
margin_right = 104.0
margin_bottom = 173.0
custom_constants/separation = 3

[node name="Pos1" type="NinePatchRect" parent="Hand"]
self_modulate = Color( 1, 1, 1, 0.294118 )
margin_right = 99.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 13 )
texture = ExtResource( 11 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Pos2" type="NinePatchRect" parent="Hand"]
self_modulate = Color( 1, 1, 1, 0.294118 )
margin_top = 16.0
margin_right = 99.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 13 )
texture = ExtResource( 11 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Pos3" type="NinePatchRect" parent="Hand"]
self_modulate = Color( 1, 1, 1, 0.294118 )
margin_top = 32.0
margin_right = 99.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 13 )
texture = ExtResource( 11 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Pos4" type="NinePatchRect" parent="Hand"]
self_modulate = Color( 1, 1, 1, 0.294118 )
margin_top = 48.0
margin_right = 99.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 13 )
texture = ExtResource( 11 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Pos5" type="NinePatchRect" parent="Hand"]
self_modulate = Color( 1, 1, 1, 0.294118 )
margin_top = 64.0
margin_right = 99.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 13 )
texture = ExtResource( 11 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Items" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -17.0
margin_right = 71.0
margin_bottom = -1.0
custom_constants/separation = 1

[node name="Pos1" type="Control" parent="Items"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Item" parent="Items/Pos1" instance=ExtResource( 12 )]
margin_top = 0.0
margin_bottom = 16.0

[node name="Pos2" type="Control" parent="Items"]
margin_left = 17.0
margin_right = 33.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Item2" parent="Items/Pos2" instance=ExtResource( 12 )]
margin_top = 0.0
margin_bottom = 16.0

[node name="Pos3" type="Control" parent="Items"]
margin_left = 34.0
margin_right = 50.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Item3" parent="Items/Pos3" instance=ExtResource( 12 )]
margin_top = 0.0
margin_bottom = 16.0

[node name="Pos4" type="Control" parent="Items"]
margin_left = 51.0
margin_right = 67.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Item4" parent="Items/Pos4" instance=ExtResource( 12 )]
margin_top = 0.0
margin_bottom = 16.0

[node name="EndTurn" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -39.0
margin_top = -15.0
margin_right = -3.0
margin_bottom = -2.0
text = "End Turn"

[node name="Banner" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 9.0
color = Color( 0.152941, 0.152941, 0.152941, 1 )

[node name="Label" type="Label" parent="Banner"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
text = "Banner"
align = 1
valign = 1

[connection signal="pressed" from="Discard/Button" to="." method="_on_Discard_Button_pressed"]
[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]
